# patm

./: MANIFEST.in  setup.cfg  setup.py
docs/source/: conf.py  index.rst  usage.rst
