[metadata]
name = patm
version = 0.1.1
description = Planetary Atmosphere Simulator in Python
long_description = file: README.rst
license_files = LICENSE
url = https://github.com/zoeyzyhu/pydisort
author = Cheng Li
author_email = chengcli@umich.edu
keywords = planetary atmosphere
license = GPL
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Documentation = https://github.com/chengcli/patm/
    Source = https://github.com/chengcli/patm/patm
    Tracker = https://github.com/chengcli/patm/issues

[options]
zip_safe = False
include_package_data = False

install_requires =
  numpy >= 1.12.0

python_requires = >=3.8

# These options exclude data from the wheel file but not from the sdist
[options.exclude_package_data]
pydisort = *.cpp, *.h
